<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surround_vision</name>
  <version>0.0.0</version>
  <description>Surround vision system with bird's-eye view and 3D vehicle model overlay</description>
  <maintainer email="jai.prakah@polimi.it">Jai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- Graphics dependencies -->
  <depend>libglew-dev</depend>
  <depend>libglfw3-dev</depend>
  <depend>libglm-dev</depend>
  <depend>libassimp-dev</depend>
  
  <!-- System dependencies -->
  <depend>libgl1-mesa-dev</depend>
  <depend>libglu1-mesa-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>